# CueSplitter

./: .coverage  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: Tests.yml  publish_to_pypi.yml
cuesplitter/: cli.py  core.py  ffmpeg.py
cuesplitter/models/: __init__.py  album.py  ffmpeg.py
tests/: conftest.py  test_models.py
