[project]
name = "cuesplitter"
version = "0.1.0"
description = ""
authors = [
    {name = "Olezhich"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cuetools (>=1.0.1,<2.0.0)",
    "typer (>=0.20.1,<0.21.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
ruff = "^0.14.9"
mypy = "^1.19.1"

[tool.ruff]
target-version = "py312"

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests/"]
addopts = ["--cov=cuesplitter",
           "--log-cli-level=INFO"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
